WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92524
Hit testing near a column break can return a result from an adjacent column when there is leading
https://bugs.webkit.org/show_bug.cgi?id=92524
Summary
Hit testing near a column break can return a result from an adjacent column w...
mitz
Reported
2012-07-27 11:38:09 PDT
Hit testing near a column break can return a result from an adjacent column when there is leading
Attachments
Add RootInlineBox::isFirstAfterPageBreak() and use it instead of relying on the presence of a pagination strut
(7.77 KB, patch)
2012-07-27 11:49 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-27 11:49:19 PDT
Created
attachment 155001
[details]
Add RootInlineBox::isFirstAfterPageBreak() and use it instead of relying on the presence of a pagination strut
mitz
Comment 2
2012-07-27 12:26:07 PDT
Fixed in <
http://trac.webkit.org/r123904
>.
Darin Adler
Comment 3
2012-07-27 13:00:35 PDT
Comment on
attachment 155001
[details]
Add RootInlineBox::isFirstAfterPageBreak() and use it instead of relying on the presence of a pagination strut View in context:
https://bugs.webkit.org/attachment.cgi?id=155001&action=review
> Source/WebCore/rendering/InlineFlowBox.h:325 > + bool m_isFirstAfterPageBreak : 1;
To keep this small on Windows, you should declare it as unsigned even though the sensible type to use is bool.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug